# strict-base-types

./: strict-base-types.cabal
src/Data/Either/: Strict.hs
src/Data/Maybe/: Strict.hs
src/Data/Tuple/: Strict.hs
